--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -28,7 +28,7 @@
 
             <div class="well">
               <button type="button" id="check_all" >
-                <%= button_to "Done All", :action => :complete_all, :remote => true,  :id => "check_all"%>
+                <%= button_to "Done All", :action => :complete_all, :remote => true %>
                   </button>
 
                <button type="button" id="uncheck_all" >
